# gba-emulator

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
include/: common.h
src/: gba.c  gba.h  main.c
src/apu/: apu.c  apu.h  channel.c  fifo.c
src/cartridge/: cartridge.c  cartridge.h  eeprom.c  flash.c  flash.h  rtc.c  rtc.h  sram.c
src/cpu/: arm7tdmi.c  arm7tdmi.h  arm_instr.c  arm_instr.h  bios_hle.c  bios_hle.h  thumb_instr.c  thumb_instr.h
src/frontend/: debug.c  frontend.c  frontend.h
src/frontend/xray/: xray.c  xray.h  xray_activity.c  xray_audio.c  xray_cpu.c  xray_draw.c  xray_draw.h  xray_font.h  xray_ppu.c  xray_tiles.c
src/input/: input.c  input.h
src/interrupt/: interrupt.c  interrupt.h
src/memory/: bus.c  bus.h  dma.c  dma.h  io_regs.h
src/ppu/: affine.c  background.c  bitmap.c  effects.c  ppu.c  ppu.h  sprites.c
src/timer/: timer.c  timer.h
